Fix scrollbar z-index

--- a/src/static/scss/components/_side-bar.scss
+++ b/src/static/scss/components/_side-bar.scss
@@ -100,7 +100,7 @@
 
       &::before {
         position: absolute;
-        z-index: 1;
+        z-index: 2;
         right: -2px;
 
         display: block;
